--- a/Bulk-Club/mainwindow.ui
+++ b/Bulk-Club/mainwindow.ui
@@ -24,7 +24,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tabLogin">
        <attribute name="title">
@@ -43,6 +43,12 @@
         <string>Sales Report</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayoutSalesReport"/>
+      </widget>
+      <widget class="QWidget" name="tabMembers">
+       <attribute name="title">
+        <string>Members</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayoutMembers"/>
       </widget>
      </widget>
     </item>
