--- a/Bulk-Club/memberswidget.ui
+++ b/Bulk-Club/memberswidget.ui
@@ -20,6 +20,13 @@
       <widget class="QTableView" name="tableViewMembers"/>
      </item>
      <item>
+      <widget class="QLabel" name="labelConversions">
+       <property name="text">
+        <string>Recommended # of conversions: </string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QPushButton" name="buttonAddMember">
